<?xml version="1.0"?>
<package format="3">
  <name>motion_predict</name>
  <version>0.0.0</version>
  <description>The motion_predict package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>carma_common</depend>
  <depend>cav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
